Montagem do Site

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="loverboys, loverboysband, band, banda, blumenau, sc, indie, pop rock, flashback, anos 80, rock nacional, rock internacional" />
   
   <script src="https://use.fontawesome.com/8d4c781b4d.js"></script>
-  
+
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="skeleton.css">
   <link rel="stylesheet" href="style.css">
@@ -21,56 +21,50 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <div class="cover">
+          <img  class="cover" src="img/loverboys-neon-cover.jpg" />
             <div class="social">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-              <i class="fa fa-youtube" aria-hidden="true"></i>
+              <a target="_blank" href="https://www.facebook.com/loverboysband">
+                <i class="fa fa-facebook-official" aria-hidden="true"></i>
+              </a>
+              <a target="_blank" href="https://www.youtube.com/channel/UCcZtXvEAdiZML-2qfDoP0pQ">
+                <i class="fa fa-youtube-play" aria-hidden="true"></i>
+              </a>
             </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="band light">
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns">
+          <div class="video-promo">
+            <iframe width="854" height="480" src="https://www.youtube.com/embed/3AV1afH35rs" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="band light">
-    <div class="container">
-      <div class="row">
-        <div class="twelve columns">
-          Vídeo do youtube
-        </div>
-      </div>
+  <div class="band light contact">
+    <div class="info">
+      <h1>Contato para Shows</h1>
+      <p>
+        <a href="mailto:contato@loverboysband.com">contato@loverboysband.com</a>
+        <br/>
+        Telefone: (47) 99194-9338 - Bruna Kleine (booker)
+      </p>
     </div>
   </div>
 
-  <div class="band light">
-    <div class="container">
-      <div class="row">
-        <div class="twelve columns">
-          Informações de contato, foto clara de fundo. Box com fundo branco transparente com as infos de contato
-        </div>
-      </div>
-    </div>
+  <div class="band dark banner">
   </div>
 
-  <div class="band dark">
-    <div class="container">
-      <div class="row">
-        <div class="twelve columns">
-          Foto de capa do youtube
-        </div>
-      </div>
-    </div>
+  <div class="band dark spacer">
   </div>
 
-  <div class="band dark">
-    <div class="container">
-      <div class="row">
-        <div class="twelve columns">
-          Espaçador preto com barra final rosa de fechamento de conteúdo
-        </div>
-      </div>
-    </div>
-  </div>
+  <div class="ruler"></div>
 
 </body>
 
